--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,5 @@
-*.csharp linguist-detectable=true  
+*.dart linguist-detectable=true  
+*.java linguist-detectable=false  
+*.js linguist-detectable=false  
 *.c++ linguist-detectable=false  
+*.xml linguist-detectable=false   
